# libsqlitecpp

./: .gitignore  CMakeLists.txt  README.md
include/: libsqlitecpp.h
src/: LSC_SQL.cpp  LSC_SQL.h  LSC_Settings.cpp  LSC_Settings.h  main.cpp  main.h
test/: unittest.cpp
windows/: libsqlitecpp.rc
